; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/wlan/extr_if_ural.c_ural_getradiocaps.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/wlan/extr_if_ural.c_ural_getradiocaps.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ieee80211com = type { %struct.ural_softc* }
%struct.ural_softc = type { i64 }
%struct.ieee80211_channel = type { i32 }

@IEEE80211_MODE_BYTES = common dso_local global i32 0, align 4
@IEEE80211_MODE_11B = common dso_local global i32 0, align 4
@IEEE80211_MODE_11G = common dso_local global i32 0, align 4
@RAL_RF_5222 = common dso_local global i64 0, align 8
@IEEE80211_MODE_11A = common dso_local global i32 0, align 4
@ural_chan_5ghz = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ieee80211com*, i32, i32*, %struct.ieee80211_channel*)* @ural_getradiocaps to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ural_getradiocaps(%struct.ieee80211com* %0, i32 %1, i32* %2, %struct.ieee80211_channel* %3) #0 {
  %5 = alloca %struct.ieee80211com*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca %struct.ieee80211_channel*, align 8
  %9 = alloca %struct.ural_softc*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i64, align 8
  store %struct.ieee80211com* %0, %struct.ieee80211com** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  store %struct.ieee80211_channel* %3, %struct.ieee80211_channel** %8, align 8
  %12 = load %struct.ieee80211com*, %struct.ieee80211com** %5, align 8
  %13 = getelementptr inbounds %struct.ieee80211com, %struct.ieee80211com* %12, i32 0, i32 0
  %14 = load %struct.ural_softc*, %struct.ural_softc** %13, align 8
  store %struct.ural_softc* %14, %struct.ural_softc** %9, align 8
  %15 = load i32, i32* @IEEE80211_MODE_BYTES, align 4
  %16 = zext i32 %15 to i64
  %17 = call i8* @llvm.stacksave()
  store i8* %17, i8** %10, align 8
  %18 = alloca i32, i64 %16, align 16
  store i64 %16, i64* %11, align 8
  %19 = mul nuw i64 4, %16
  %20 = trunc i64 %19 to i32
  %21 = call i32 @memset(i32* %18, i32 0, i32 %20)
  %22 = load i32, i32* @IEEE80211_MODE_11B, align 4
  %23 = call i32 @setbit(i32* %18, i32 %22)
  %24 = load i32, i32* @IEEE80211_MODE_11G, align 4
  %25 = call i32 @setbit(i32* %18, i32 %24)
  %26 = load %struct.ieee80211_channel*, %struct.ieee80211_channel** %8, align 8
  %27 = load i32, i32* %6, align 4
  %28 = load i32*, i32** %7, align 8
  %29 = call i32 @ieee80211_add_channels_default_2ghz(%struct.ieee80211_channel* %26, i32 %27, i32* %28, i32* %18, i32 0)
  %30 = load %struct.ural_softc*, %struct.ural_softc** %9, align 8
  %31 = getelementptr inbounds %struct.ural_softc, %struct.ural_softc* %30, i32 0, i32 0
  %32 = load i64, i64* %31, align 8
  %33 = load i64, i64* @RAL_RF_5222, align 8
  %34 = icmp eq i64 %32, %33
  br i1 %34, label %35, label %45

35:                                               ; preds = %4
  %36 = load i32, i32* @IEEE80211_MODE_11A, align 4
  %37 = call i32 @setbit(i32* %18, i32 %36)
  %38 = load %struct.ieee80211_channel*, %struct.ieee80211_channel** %8, align 8
  %39 = load i32, i32* %6, align 4
  %40 = load i32*, i32** %7, align 8
  %41 = load i32, i32* @ural_chan_5ghz, align 4
  %42 = load i32, i32* @ural_chan_5ghz, align 4
  %43 = call i32 @nitems(i32 %42)
  %44 = call i32 @ieee80211_add_channel_list_5ghz(%struct.ieee80211_channel* %38, i32 %39, i32* %40, i32 %41, i32 %43, i32* %18, i32 0)
  br label %45

45:                                               ; preds = %35, %4
  %46 = load i8*, i8** %10, align 8
  call void @llvm.stackrestore(i8* %46)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @memset(i32*, i32, i32) #2

declare dso_local i32 @setbit(i32*, i32) #2

declare dso_local i32 @ieee80211_add_channels_default_2ghz(%struct.ieee80211_channel*, i32, i32*, i32*, i32) #2

declare dso_local i32 @ieee80211_add_channel_list_5ghz(%struct.ieee80211_channel*, i32, i32*, i32, i32, i32*, i32) #2

declare dso_local i32 @nitems(i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
